<resources>
    <string name="app_name">QuanLySanPham</string>
    <string name="tenDangNhap">Đăng Nhập</string>
    <string name="etUser">Tên Đăng Nhập</string>
    <string name="etPassword">Mật Khẩu</string>
    <string name="btnDangNhap">Đăng Nhập</string>
    <string name="tvForgot">Quên Mật Khẩu</string>
    <string name="nameProject">QUẢN LÝ SẢN PHẨM</string>
    <string name="nameTypeProduct">QUẢN LÝ LOẠI SẢN PHẨM</string>
    <string name="thontin">THÔNG TIN</string>
    <string name="themSP">Thêm Sản Phẩm</string>
    <string name="themLSP">Thêm Loại Sản Phẩm</string>
    <string name="btnSua">Sửa</string>
    <string name="btnThem">Thêm</string>
    <string name="btnChiTiet">Chi Tiết</string>
    <string name="btnXoa">Xóa</string>
    <string name="btnNo">Không</string>
    <string name="messageXoaLSP">Bạn Muốn Xóa Loại Sản Phẩm?</string>
    <string name="messageXoaSP">Bạn Muốn Xóa Sản Phẩm?</string>
    <string name="messageContrain">Đang Có Dữ Liệu Sản Phẩm. Bạn Có Muốn Xóa?</string>
    <string name="messageThemSP">Bạn Có Muốn Thêm Sản Phẩm</string>
    <string name="messageThemLSP">Bạn Có Muốn Thêm Loại Sản Phẩm</string>
    <string name="messageSuaSP">Bạn Có Muốn Sửa Sản Phẩm</string>
    <string name="messageSuaLSP">Bạn Có Muốn Sửa Loại Sản Phẩm</string>
    <string name="titleThemSP">THÊM SẢN PHẨM</string>
    <string name="contentImage">Hình Sản Phẩm</string>
    <string name="hintMaSP">Mã Sản Phẩm</string>
    <string name="hintTenSP">Tên Sản Phẩm</string>
    <string name="hintGiaSP">Giá Sản Phẩm</string>
    <string name="hintHanSD">Hạn Sử Dụng</string>
    <string name="hintTrongLuong">Trọng Lượng</string>
    <string name="btnLuu">Lưu</string>
    <string name="titleThemLSP">THÊM LOẠI SẢN PHẨM</string>
    <string name="hintMaLSP">Mã Loại Sản Phẩm</string>
    <string name="hintTenLSP">Tên Loại Sản Phẩm</string>
    <string name="titleSuaSP">SỬA SẢN PHẨM</string>
    <string name="titleSuaLSP">SỬA LOẠI SẢN PHẨM</string>
    <string name="sanPham">SẢN PHẨM</string>
    <string name="loaiSanPham">LOẠI SẢN PHẨM</string>
    <string name="back">Trở Về</string>
    <string name="exit">Thoát</string>
    <string name="success">Thành Công</string>
    <string name="messageSuaLSPContrain">Hiện tại đang có sản phẩm. Không thể sửa dữ liệu</string>
</resources>