<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ThemSanPhamActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleThemSP"
        android:textSize="14pt"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>
    <ImageView
        android:layout_width="50pt"
        android:layout_height="50pt"
        android:layout_marginTop="10pt"
        android:layout_gravity="center"
        android:id="@+id/imgSanPham"
        android:contentDescription="@string/contentImage"
        android:src="@drawable/imagedefault"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMaSanPham"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintMaSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTenSanPham"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintTenSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGiaSanPham"
        android:inputType="numberDecimal"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintGiaSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHanSuDung"
        android:inputType="date"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintHanSD"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTrongLuong"
        android:inputType="date"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintTrongLuong"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30pt"
        android:text="@string/btnLuu"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:layout_gravity="center"
        android:id="@+id/btnThemSanPham"/>
        

</LinearLayout>