<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".SuaSanPhamActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSuaSP"
        android:textColor="@color/black"
        android:textSize="13pt"
        android:textStyle="bold"
        android:layout_marginVertical="15pt"
        android:gravity="center"/>
    <ImageView
        android:layout_width="50pt"
        android:layout_height="50pt"

        android:layout_gravity="center"
        android:id="@+id/imgUpdateSanPham"
        android:contentDescription="@string/contentImage"
        android:src="@drawable/imagedefault"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUpdateMaSanPham"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintMaSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUpdateTenSanPham"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintTenSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUpdateGiaSanPham"
        android:inputType="numberDecimal"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintGiaSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUpdateHanSuDung"
        android:inputType="date"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintHanSD"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUpdateTrongLuong"
        android:inputType="date"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:hint="@string/hintTrongLuong"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUpdate"
        android:layout_marginTop="10pt"
        android:layout_marginRight="20pt"
        android:layout_marginLeft="20pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLuu"
        android:id="@+id/btnUpdateSP"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"/>

</LinearLayout>