<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".ThemLoaiSanPhamActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleThemLSP"
        android:textSize="13pt"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMaLoaiSP"
        android:hint="@string/hintMaLSP"
        android:layout_margin="10pt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTenLoaiSP"
        android:hint="@string/hintTenLSP"
        android:layout_margin="10pt"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThemLSP"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:text="@string/btnLuu"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"/>
</LinearLayout>