<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/tenDangNhap"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:hint="@string/etUser"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="15dp"
        android:padding="10pt"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10pt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="15dp"
        android:padding="10pt"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="10pt"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_margin="5pt"
        android:padding="5pt"
        android:text="@string/btnDangNhap"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="@string/tvForgot"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="16dp"/>

</LinearLayout>