<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150pt"
    android:background="@color/background_dialog"
    android:layout_height="80pt"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:text="@string/messageSuaSP"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="10pt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20pt">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_quanly"
            android:id="@+id/btnUpdateSPAccept"
            android:text="@string/btnSua"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_quanly"
            android:layout_marginLeft="5pt"
            android:id="@+id/btnUpdateSPUnAccept"
            android:text="@string/btnNo"/>
    </LinearLayout>

</LinearLayout>