<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".ChiTietSanPhamActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanPham"
        android:textSize="13pt"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginVertical="10pt"/>
    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="70pt"
        android:layout_height="70pt"
        android:layout_gravity="center"
        android:src="@drawable/imagedefault"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/hintMaSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMaSP"
            android:text="MaSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/hintTenSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTenSP"
            android:text="TenSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/hintGiaSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtGiaSP"
            android:text="GiaSP"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/hintHanSD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtHanSD"
            android:text="HanSD"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/hintTrongLuong"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTrongLuong"
            android:text="TL"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="9pt"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:layout_gravity="center"
        android:layout_marginVertical="10pt"/>
</LinearLayout>