<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".ChiTietLoaiSanPhamActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loaiSanPham"
        android:textSize="13pt"
        android:textStyle="bold"
        android:layout_marginVertical="30pt"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80pt"
            android:layout_height="wrap_content"
            android:text="@string/hintMaLSP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="8pt"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MaLSP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="8pt"
            android:gravity="center"
            android:id="@+id/txtDetailMaLSP"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80pt"
            android:layout_height="wrap_content"
            android:text="@string/hintTenLSP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="8pt"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TenLSP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="8pt"
            android:gravity="center"
            android:id="@+id/txtDetailTenLSP"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:layout_marginVertical="10pt"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:layout_gravity="center"/>
</LinearLayout>