<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_login"
    tools:context=".SuaLoaiSanPhamActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40pt"
        android:text="@string/titleSuaLSP"
        android:textColor="@color/black"
        android:textSize="13pt"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:layout_marginLeft="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintMaLSP"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etMaLoaiSP"
            android:hint="@string/hintMaLSP"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:layout_marginLeft="10pt"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintTenLSP"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTenLoaiSP"
            android:hint="@string/hintTenLSP"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSua"
        android:id="@+id/btnSuaLoaiSanPham"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/btn_quanly"
        android:textSize="10pt"
        android:paddingHorizontal="20pt"
        android:paddingVertical="5pt"
        android:layout_marginTop="10pt"
        android:layout_gravity="center"/>
</LinearLayout>