<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="10pt"
    android:background="@color/background_lsp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mã LSP: "
                android:layout_marginTop="10dp"
                android:textSize="9pt"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtMaLSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="9pt"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Mã Loại Sản Phẩm" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tên LSP: "
                android:layout_marginTop="10dp"
                android:textSize="9pt"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtTenLSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="Tên Loại Sản Phẩm" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="3pt"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:textColor="@color/black"
            android:backgroundTint="@color/btn_quanly"
            android:text="@string/btnChiTiet"
            android:id="@+id/btnChiTietLSP"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/btn_quanly"
            android:layout_marginLeft="5pt"
            android:text="@string/btnSua"
            android:id="@+id/btnSuaLSP"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/btn_quanly"
            android:layout_marginLeft="5pt"
            android:text="@string/btnXoa"
            android:id="@+id/btnXoaLSP"/>
    </LinearLayout>
</LinearLayout>